# TeraMindTestTask

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt  common.hpp  main.cpp
app/command_line_utils/: CommandLineUtils.cpp  CommandLineUtils.hpp
stdafx/: CMakeLists.txt  stdafx.hpp
